--- a/modules-available/sysconfig/lang/en/template-tags.json
+++ b/modules-available/sysconfig/lang/en/template-tags.json
@@ -28,6 +28,8 @@
     "lang_confirmDeleteQuestion": "Are you sure you want to delete this entry?",
     "lang_connectionWait": "Checking connection, please wait",
     "lang_continueAnyway": "Continue anyway",
+    "lang_credPassingNotes": "If you enable this option, the username and password of the logged in user will be passed to the start script inside the VM, which is supplied by the tutor who created the lecture. This can be used to automatically authenticate the user to additional services by script. You should only enable this option if you trust the group of users eligible to edit lectures.",
+    "lang_credentialPassing": "Pass user credentials to start script.",
     "lang_customCertificate": "Additional (intermediate) certificates required for certificate validation",
     "lang_customModuleInfo1": "About a custom module, it is possible to add arbitrary files to a Linux system that is booted clients. For this purpose, an archive can be uploaded using a file system structure that is extracted in this form 1:1 in the booted Linux.",
     "lang_customModuleInfo2": "Example: If the uploaded archive is the file etc\/example.conf, this file will be located as \/etc\/example.conf to a booted client.",
@@ -36,11 +38,12 @@
     "lang_dnLookup": "Looking up bind dn",
     "lang_download": "Download",
     "lang_downloadLong": "Download module \"as is\".",
+    "lang_driveLetterNote": "IMPORTANT: Pick a drive letter for the home directory that will be free in the Virtual Machines. Otherwise, a random letter will be assigned.",
     "lang_editLong": "Edit module or configuration.",
     "lang_editingLocationInfo": "You're setting the configuration for a specific location, not the global one",
     "lang_folderRedirection": "Folder Redirection",
     "lang_generateModule": "Generating module",
-    "lang_handlingNotes": "Here you can configure how network shares (like the user's home directory) are mapped inside the VM. Old Versions of bwLehrpool used the VMware Shared Folder technique, which could cause problems with certain file servers. The new \"native mode\" works much better, but on Windows guests, it requires that you (1) use an smb\/cifs file server (Windows Server, Linux with Samba) and (2) have openslx.exe setup to autorun in the VM (this is already configured for bwLehrpool templates). Native mode with fallback is experimental and known to cause temporary freezes with some VMs. Use with care. IMPORTANT: Pick a drive letter for the home directory that will be free in the Virtual Machines. Otherwise, a random letter will be assigned.",
+    "lang_handlingNotes": "Here you can configure how network shares (like the user's home directory) are mapped inside the VM. Old Versions of bwLehrpool used the VMware Shared Folder technique, which could cause problems with certain file servers. The new \"native mode\" works much better, but on Windows guests, it requires that you (1) use an smb\/cifs file server (Windows Server, Linux with Samba) and (2) have openslx.exe setup to autorun in the VM (this is already configured for bwLehrpool templates).",
     "lang_helpHomeAttrHead": "Name of the home directory attribute",
     "lang_helpHomeAttrText": "Here you can specify the name of the attribute on the Active Directory that contains the path of the home directory server. Usually this is \"homeDirectory\". If you leave this blank, the wiszard will try to determine the attribute name automatically. If home directories don't work, check the client log (Status->Client log) and the LDAP proxy log (Status->Server status).",
     "lang_helpModuleConfiguration": "Configuration modules are the building blocks from which a system configuration is created. Here you can create both generic modules by a wizard, as well as create completely custom modules (advanced Linux knowledge required).",
@@ -87,10 +90,13 @@
     "lang_selfSignedNote": "The certificate of this server cannot be verified using the builtin trust store. If you know that the server's certificate was signed by an unknown CA, you can try to proceed. The chain will then be extracted from the server, which should be successful in most cases. If the authentication module does not work afterwards, check the LDAP-proxy logs on the server status page.",
     "lang_shareDesktop": "Desktop (Might hide shortcuts created by the tutor)",
     "lang_shareDocuments": "My Documents",
+    "lang_shareDomainLabel": "Domain name",
+    "lang_shareDomainNote": "The user name will be prefixed by the domain when trying to mount home directories (DOMAIN\\user). Usually this will be determined automatically, but you can always override it here.",
     "lang_shareDownloads": "Downloads",
     "lang_shareHomeDrive": "Home drive letter (Windows)",
     "lang_shareMapCreate": "Create folders on network share if they don't exist",
     "lang_shareMedia": "My Music, Videos, Pictures",
+    "lang_shareModeNote": "\"Native mode with fallback\" is experimental and known to cause temporary freezes with some VMs. Use with care.",
     "lang_shareOther": "Other (Saved Games, Contacts, Favorites, ...)",
     "lang_shareRemapMode": "Mapping mode",
     "lang_show": "Show",
