Admin-panel: Credentials Button is now red/green if the connection failed/succeeded. Also an error msg is shown if the connection failed.

--- a/modules-available/locationinfo/lang/en/messages.json
+++ b/modules-available/locationinfo/lang/en/messages.json
@@ -3,5 +3,6 @@
     "added-x-entries": "Entries added: {{0}}",
     "deleted-x-entries": "Entries deleted: {{0}}",
     "openingtime-updated": "Openingtime updated.",
-    "config-saved": "Config successfully saved."
+    "config-saved": "Config successfully saved.",
+    "auth-failed": "Authentification failed: Locationid {{0}} Error: {{1}}"
 }
