--- a/modules-available/locationinfo/lang/de/messages.json
+++ b/modules-available/locationinfo/lang/de/messages.json
@@ -3,5 +3,6 @@
     "added-x-entries": "Eintr\u00e4ge hinzugef\u00fcgt: {{0}}",
     "deleted-x-entries": "Eintr\u00e4ge gelöscht: {{0}}",
     "openingtime-updated": "Öffnungszeiten aktualisierts.",
-    "config-saved": "Einstellungen erfolgreich gespeichert."
+    "config-saved": "Einstellungen erfolgreich gespeichert.",
+    "auth-failed": "Authentifizierung  fehlgeschlagen: Locationid {{0}} Error: {{1}}"
 }
