Locationinfo: Errors from the CourseBackend are now safes in the db and shown in the Admin-Panel. Refresh-button added for the servers. Install.php needs to be executed!

--- a/modules-available/locationinfo/lang/de/messages.json
+++ b/modules-available/locationinfo/lang/de/messages.json
@@ -4,5 +4,5 @@
     "deleted-x-entries": "Eintr\u00e4ge gelöscht: {{0}}",
     "openingtime-updated": "Öffnungszeiten aktualisierts.",
     "config-saved": "Einstellungen erfolgreich gespeichert.",
-    "auth-failed": "Authentifizierung  fehlgeschlagen: Locationid {{0}} Error: {{1}}"
+    "auth-failed": "[{{0}}] {{1}} Error: {{2}}"
 }
