--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -1,4 +1,6 @@
 {
+    " lang_canLoginOrganization": "Members of this organization can login",
+    " lang_canLoginUser": "User can login",
     "lang_actionTarget": "Action target",
     "lang_allowLoginByDefault": "Allow all staff members to login and use the bwLehrpool-Suite",
     "lang_allowLoginDescription": "If this option is enabled, all members of the organization marked as staff or employee are allowed to login to this server and manage VMs\/courses. Otherwise, new users need to be individually allowed access after their first login attempt by visiting the sub page \"users and permissions\" in this web interface.",
