--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -3,6 +3,7 @@
     "lang_locationName": "Name",
     "lang_locationID": "ID",
     "lang_locationIsHidden": "Versteckt",
+    "lang_locationIsHidden_title": "Wenn aktiv, dann liefert die API keine Informationen über diesen Raum.",
     "lang_locationInUse": "In Benutzung / Gesamt",
     "lang_locationSettings": "Einstellungen",
     "lang_locationConfig": "Config",
@@ -12,9 +13,8 @@
     "lang_pcY": "Y",
     "lang_pcState": "PC Status",
     "lang_day": "Tag",
-    "lang_openingTime": "Öffnungszeit",
+    "lang_openingTime": "Öffnungszeiten",
     "lang_closingTime": "Schließungszeit",
-    "lang_deleteAll": "Alles Löschen",
     "lang_shortMonday": "Mo",
     "lang_shortTuesday": "Di",
     "lang_shortWednesday": "Mi",
@@ -27,6 +27,7 @@
     "lang_saturday": "Samstag",
     "lang_sunday": "Sonntag",
     "lang_expertMode": "Experten Modus",
+    "lang_expertMode_title": "Ermöglicht es dir Öffnungzeiten für jeden Tag zu Setzen.",
     "lang_language": "Sprache",
     "lang_languageEn": "en",
     "lang_languageDe": "de",
@@ -49,26 +50,31 @@
     "lang_rotation2": "180°",
     "lang_rotation3": "90° ⟳",
     "lang_vertical": "Vertikal",
-    "lang_calupdate": "Kalender update rate",
+    "lang_calupdate": "Kalenderabfragrate",
     "lang_calupdateTooltip": "Zeit nachdem der Kalender geupdated wird (in minutes)",
-    "lang_roomupdate": "Raum update rate",
+    "lang_roomupdate": "Raumabfragrate",
     "lang_roomupdateTooltip": "Zeit nachder die Pcs geupdated werden (in sekunden)",
-    "lang_configupdate": "Einstellungs update rate",
+    "lang_configupdate": "Einstellungsabfragrate",
     "lang_configupdateTooltip": "Zeit nachder die Einstellungen geupdated werden (in minuten)",
     "lang_min": "min",
     "lang_sec": "sec",
     "lang_autoScale": "Auto skalierung",
     "lang_deleteConfirmation": "Bist du sicher?",
     "lang_addServer": "Server",
+    "lang_addServer_title": "Server hinzufügen",
     "lang_serverTable": "Server Liste",
     "lang_buildingTable": "Gebäude / Raum Liste",
-    "lang_serverUrl": "Url",
-    "lang_serverType": "Type",
+    "lang_serverUrl": "URL",
+    "lang_serverType": "Typ",
     "lang_serverUser": "Benutzer",
     "lang_serverPassword": "Passwort",
     "lang_serverID": "Server ID",
     "lang_sID": "sID",
     "lang_server": "Server",
     "lang_serverRoomId": "Server: Raum ID",
-    "lang_credentials": "Anmeldeinformationen"
+    "lang_credentials": "Anmeldung",
+    "lang_refresh_title": "Überprüft ob die Serververbindung gültig ist.",
+    "lang_delete": "Löschen",
+    "lang_refresh": "Aktualisieren",
+    "lang_general": "Allgemein"
 }
