--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -4,7 +4,7 @@
     "lang_locationID": "ID",
     "lang_locationIsHidden": "Versteckt",
     "lang_locationIsHidden_title": "Wenn aktiv, dann liefert die API keine Informationen über diesen Raum.",
-    "lang_locationInUse": "In Benutzung / Gesamt",
+    "lang_locationInUse": "Rechner",
     "lang_locationSettings": "Einstellungen",
     "lang_locationConfig": "Config",
     "lang_pcID": "ID",
@@ -28,37 +28,47 @@
     "lang_sunday": "Sonntag",
     "lang_expertMode": "Experten Modus",
     "lang_expertMode_title": "Ermöglicht es dir Öffnungzeiten für jeden Tag zu Setzen.",
+    "lang_nameTooltip": "Legt den Namen des Servers fest.",
+    "lang_urlTooltip": "Server URL über den das backend versucht Kalender-daten zu holen.",
+    "lang_typeTooltip": "Legt fest um welchen Typ von Server es sich handelt.",
     "lang_language": "Sprache",
-    "lang_languageEn": "en",
-    "lang_languageDe": "de",
-    "lang_languagePt": "pt",
+    "lang_languageEn": "Englisch",
+    "lang_languageDe": "Deutsch",
+    "lang_languagePt": "Portugiesisch",
+    "lang_languageTooltip": "Die Sprache, welche vom Frontend benutzt wird.",
     "lang_mode": "Modus",
     "lang_mode1": "Kalender & Raum",
     "lang_mode2": "Kalender",
     "lang_mode3": "Raum",
     "lang_mode4": "Wechselnd",
-    "lang_ecoMode": "Eco modus (e-ink)",
-    "lang_daysToShow": "Tage im Kalender",
-    "lang_daysToShowTooltip": "[1-7] Zeigt die gewünschte Anzahl an Tagen im Kalender an.",
-    "lang_scale": "Skalierung",
-    "lang_scaleTooltip": "[10-90] Skaliert die Kalender breite in modus 1",
+    "lang_modeTooltip": "Die Anzeigemodi, welche das frontend unterstützt.",
+    "lang_ecoMode": "E-Ink modus",
+    "lang_ecoTooltip": "Anstelle der Farb-basierten PC-Status Bilder, werden Symbol-basierte PC Bilder verwendet.",
+    "lang_daysToShow": "Tage",
+    "lang_daysToShowTooltip": "Legt die gewünschte Anzahl an Tagen im Kalender fest.",
+    "lang_scale": "Kalender breite",
+    "lang_scaleTooltip": "[10-90] Legt die Kalenderbreite fest. (In Prozent)",
     "lang_switchTime": "Wechsel Zeit",
-    "lang_switchTimeTooltip": "[1-120] Die Zeit die vergeht bis ein wechsel erfolgt in modus 4 (in sekunden)",
+    "lang_switchTimeTooltip": "[1-120] Legt die Zeit fest, die vergeht bis ein wechsel erfolgt (in sekunden)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0°",
     "lang_rotation1": "90° ⟲",
     "lang_rotation2": "180°",
     "lang_rotation3": "90° ⟳",
-    "lang_vertical": "Vertikal",
-    "lang_calupdate": "Kalenderabfragrate",
-    "lang_calupdateTooltip": "Zeit nachdem der Kalender geupdated wird (in minutes)",
-    "lang_roomupdate": "Raumabfragrate",
+    "lang_rotationTooltip": "Rotiert den Raum.",
+    "lang_vertical": "Vertikaler Modus",
+    "lang_verticalTooltip": "Legt fest, ob der Kalender und der Raum übereinander angezeigt werden soll.",
+    "lang_updateRates": "Anfragraten",
+    "lang_calendar": "Kalender",
+    "lang_calupdateTooltip": "Zeit nachdem der Kalender geupdated wird (in minuten)",
+    "lang_room": "Raum",
     "lang_roomupdateTooltip": "Zeit nachder die Pcs geupdated werden (in sekunden)",
-    "lang_configupdate": "Einstellungsabfragrate",
+    "lang_config": "Einstellungen",
     "lang_configupdateTooltip": "Zeit nachder die Einstellungen geupdated werden (in minuten)",
     "lang_min": "min",
     "lang_sec": "sec",
-    "lang_autoScale": "Auto skalierung",
+    "lang_autoScale": "Auto Tage",
+    "lang_autoscaleTooltip": "Berechnet sich die optimale anzahl an Tagen, anhand der Bildschirmbreite, die der Kalender anzeigt.",
     "lang_deleteConfirmation": "Bist du sicher?",
     "lang_addServer": "Server",
     "lang_addServer_title": "Server hinzufügen",
@@ -71,10 +81,14 @@
     "lang_serverID": "Server ID",
     "lang_sID": "sID",
     "lang_server": "Server",
-    "lang_serverRoomId": "Server: Raum ID",
+    "lang_serverTooltip": "Legt fest, von welchem Server die Kalender Daten bezogen werden.",
+    "lang_roomId": "Raum ID",
+    "lang_roomIdTooltip": "Die ID vom Raum, welche der Server braucht, um die Kalender Daten abzurufen.",
     "lang_credentials": "Anmeldung",
     "lang_refresh_title": "Überprüft ob die Serververbindung gültig ist.",
     "lang_delete": "Löschen",
     "lang_refresh": "Aktualisieren",
-    "lang_general": "Allgemein"
+    "lang_general": "Allgemein",
+    "lang_server": "Server",
+    "lang_display": "Anzeige"
 }
