--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -5,7 +5,7 @@
     "lang_locationID": "ID",
     "lang_locationIsHidden": "Hidden",
     "lang_locationIsHidden_title": "If checked the API doesn't return information about the room.",
-    "lang_locationInUse": "In use / total",
+    "lang_locationInUse": "Clients",
     "lang_locationSettings": "Settings",
     "lang_locationConfig": "Config",
 
@@ -33,37 +33,47 @@
     "lang_expertMode": "Expert mode",
     "lang_expertMode_title": "Allows you to set openingtimes for every day.",
 
+    "lang_nameTooltip": "Defines the name of the server.",
+    "lang_urlTooltip": "Server URL on which the backend trys to get the calendar data from.",
+    "lang_typeTooltip": "Defines on which type of server you want to connect to.",
     "lang_language": "Language",
-    "lang_languageEn": "en",
-    "lang_languageDe": "de",
-    "lang_languagePt": "pt",
+    "lang_languageEn": "English",
+    "lang_languageDe": "German",
+    "lang_languagePt": "Portugues",
+    "lang_languageTooltip": "The language the frontend uses.",
     "lang_mode": "Mode",
     "lang_mode1": "Calendar & Room",
     "lang_mode2": "Calendar",
     "lang_mode3": "Room",
     "lang_mode4": "Switching",
-    "lang_ecoMode": "Eco mode (e-ink)",
-    "lang_daysToShow": "Days to show",
-    "lang_daysToShowTooltip": "[1-7] Sets how many days the calendar shows",
-    "lang_scale": "Scale",
-    "lang_scaleTooltip": "[10-90] scales the calendar width in mode 1",
+    "lang_modeTooltip": "The display modes the frontend supports.",
+    "lang_ecoMode": "E-Ink mode",
+    "lang_ecoTooltip": "Symbolic based pc state pictures are used instead of the colour base ones.",
+    "lang_daysToShow": "Days",
+    "lang_daysToShowTooltip": "Defines the amount of days to show in the calendar",
+    "lang_scale": "Calendar width",
+    "lang_scaleTooltip": "[10-90] Defines the calendar width. (in percent)",
     "lang_switchTime": "Switchtime",
-    "lang_switchTimeTooltip": "[1-120] Sets the time between switching in mode 4 (in seconds)",
+    "lang_switchTimeTooltip": "[1-120] Sets the time between switching (in seconds)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0°",
     "lang_rotation1": "90° ⟲",
     "lang_rotation2": "180°",
     "lang_rotation3": "90° ⟳",
-    "lang_vertical": "Vertical",
-    "lang_calupdate": "Calendar update rate",
+    "lang_rotationTooltip": "Rotates the room.",
+    "lang_vertical": "Vertical mode",
+    "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other.",
+    "lang_updateRates": "Update rates",
+    "lang_calendar": "Calendar",
     "lang_calupdateTooltip": "Time the calender querys for updates (in minutes)",
-    "lang_roomupdate": "Room update rate",
+    "lang_room": "Room",
     "lang_roomupdateTooltip": "Time the PCs in the room gets updated (in seconds)",
-    "lang_configupdate": "Config update",
+    "lang_config": "Config",
     "lang_configupdateTooltip": "Time interval the config gets updated (in minutes)",
     "lang_min": "min",
     "lang_sec": "sec",
-    "lang_autoScale": "Auto scale",
+    "lang_autoScale": "Auto Days",
+    "lang_autoscaleTooltip": "Calculates the optimum amount of days to show from the display width.",
     "lang_deleteConfirmation": "Are you sure?",
     "lang_addServer": "Server",
     "lang_addServer_title": "Add server",
@@ -76,10 +86,15 @@
     "lang_serverID": "Server ID",
     "lang_sID": "sID",
     "lang_server": "Server",
-    "lang_serverRoomId": "Server: Room ID",
+    "lang_serverTooltip": "Defines from which server the room queries the calendar data.",
+    "lang_roomId": "Room ID",
+    "lang_roomIdTooltip": "The ID of the room the server needs, for querying the calendar data.",
     "lang_credentials": "Login",
     "lang_refresh_title": "Checks if the server connection is valid.",
     "lang_delete": "Delete",
     "lang_refresh": "Refresh",
-    "lang_general": "General"
+    "lang_general": "General",
+
+    "lang_server": "Server",
+    "lang_display": "Display"
 }
