Save Button is now in the footer. Url preview added in the room settings

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -75,6 +75,8 @@
     "lang_serverTable": "Server Liste",
     "lang_buildingTable": "Gebäude / Raum Liste",
     "lang_serverUrl": "URL",
+    "lang_customUrl": "Benutzerdefinierter URL",
+    "lang_customUrlTooltip": "Dieser URL überscheibt die Einstellungen von dem Raum.",
     "lang_serverType": "Typ",
     "lang_serverUser": "Benutzer",
     "lang_serverPassword": "Passwort",
