[permission-manager] added role editor (new role and edit role)

--- a/modules-available/permissionmanager/lang/de/module.json
+++ b/modules-available/permissionmanager/lang/de/module.json
@@ -1,4 +1,4 @@
 {
-    "module_name": "Mein erstes Modul",
-    "page_title": "Mein erster Seitentitel"
+    "module_name": "Rechtemanager",
+    "page_title": "Rechtemanager"
 }
