--- a/modules-available/permissionmanager/lang/en/module.json
+++ b/modules-available/permissionmanager/lang/en/module.json
@@ -1,4 +1,4 @@
 {
-    "module_name": "My first module",
-    "page_title": "My first page title"
+    "module_name": "Permission Manager",
+    "page_title": "Permission Manager"
 }
