--- a/modules-available/permissionmanager/lang/en/template-tags.json
+++ b/modules-available/permissionmanager/lang/en/template-tags.json
@@ -10,5 +10,6 @@
     "lang_Remove": "Remove",
     "lang_Delete": "Delete",
     "lang_removeCheck": "Are you sure you want to remove this role?",
-    "lang_deleteCheck": "Are you sure you want to delete this role?"
+    "lang_deleteCheck": "Are you sure you want to delete this role?",
+    "lang_emptyNameWarning": "Role name can not be empty!"
 }
