--- a/modules-available/permissionmanager/lang/en/template-tags.json
+++ b/modules-available/permissionmanager/lang/en/template-tags.json
@@ -11,5 +11,10 @@
     "lang_Delete": "Delete",
     "lang_removeCheck": "Are you sure you want to remove this role?",
     "lang_deleteCheck": "Are you sure you want to delete this role?",
-    "lang_emptyNameWarning": "Role name can not be empty!"
+    "lang_emptyNameWarning": "Role name can not be empty!",
+    "lang_Name": "Name",
+    "lang_Cancel": "Cancel",
+    "lang_Save": "Save",
+    "lang_all": "all",
+    "lang_selected": "selected"
 }
