[permission-manager] added possibility to select all permissions

--- a/modules-available/permissionmanager/lang/de/template-tags.json
+++ b/modules-available/permissionmanager/lang/de/template-tags.json
@@ -16,5 +16,6 @@
     "lang_Cancel": "Abbrechen",
     "lang_Save": "Speichern",
     "lang_all": "alle",
-    "lang_selected": "ausgewählte"
+    "lang_selected": "ausgewählte",
+    "lang_Permissions": "Rechte"
 }
