--- a/modules-available/permissionmanager/lang/en/template-tags.json
+++ b/modules-available/permissionmanager/lang/en/template-tags.json
@@ -16,5 +16,6 @@
     "lang_Cancel": "Cancel",
     "lang_Save": "Save",
     "lang_all": "all",
-    "lang_selected": "selected"
+    "lang_selected": "selected",
+    "lang_Permissions": "Permissions"
 }
