--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -1,12 +1,11 @@
 {
-    " lang_canLoginOrganization": "Members of this organization can login",
-    " lang_canLoginUser": "User can login",
     "lang_actionTarget": "Action target",
     "lang_allowLoginByDefault": "Allow all staff members to login and use the bwLehrpool-Suite",
     "lang_allowLoginDescription": "If this option is enabled, all members of the organization marked as staff or employee are allowed to login to this server and manage VMs\/courses. Otherwise, new users need to be individually allowed access after their first login attempt by visiting the sub page \"users and permissions\" in this web interface.",
     "lang_asteriskRequired": "Fields marked with (*) are required",
     "lang_blockCount": "Block count",
-    "lang_canLogin": "Members of this organization can login",
+    "lang_canLoginOrganization": "Users from this organization can login",
+    "lang_canLoginUser": "This user can login",
     "lang_createTime": "Created",
     "lang_currentFilter": "Current filter",
     "lang_defaultImagePermissionAdmin": "Administrate",
