--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -47,6 +47,7 @@
     "lang_modelStats": "PC models",
     "lang_more": "More",
     "lang_newMachines": "New machines",
+    "lang_noProjectorsDefined": "No projector overrides defined",
     "lang_notes": "Notes",
     "lang_onlineMachines": "Online clients",
     "lang_partName": "Name",
@@ -55,17 +56,21 @@
     "lang_partitionSize": "Size",
     "lang_pendingSectors": "Sectors pending reallocation",
     "lang_powerOnTime": "Power on time",
+    "lang_projector": "Projector",
+    "lang_projectors": "Projectors",
     "lang_ram": "Memory",
     "lang_ramSize": "Size",
     "lang_ramSlots": "Memory slots",
     "lang_realCores": "Cores",
     "lang_reallocatedSectors": "Bad sectors",
+    "lang_screens": "Screens",
     "lang_serialNo": "Serial no",
     "lang_showList": "Show list",
     "lang_showVisualization": "Show visualization",
     "lang_sockets": "Sockets",
     "lang_tempPart": "Temp. partition",
     "lang_tempPartStats": "Temporary partition",
+    "lang_thoseAreProjectors": "These model names will always be treated as beamers, even if the device's EDID data says otherwise.",
     "lang_timebarDesc": "Visual representation of the last few days. Red parts mark periods where the client was occupied, green parts where the client was idle. Dimmed parts mark nights (10pm to 8am).",
     "lang_tmpGb": "HDD temp",
     "lang_total": "Total",
