--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -47,6 +47,7 @@
     "lang_modelStats": "PC-Modelle",
     "lang_more": "Mehr",
     "lang_newMachines": "Neue Ger\u00e4te",
+    "lang_noProjectorsDefined": "Keine Beamer-Overrides definiert",
     "lang_notes": "Anmerkungen",
     "lang_onlineMachines": "Gestartete Clients",
     "lang_partName": "Name",
@@ -55,17 +56,21 @@
     "lang_partitionSize": "Gr\u00f6\u00dfe",
     "lang_pendingSectors": "Potentiell defekte Sektoren",
     "lang_powerOnTime": "Betriebszeit",
+    "lang_projector": "Beamer",
+    "lang_projectors": "Beamer",
     "lang_ram": "Arbeitsspeicher",
     "lang_ramSize": "Gr\u00f6\u00dfe",
     "lang_ramSlots": "Speicher-Slots",
     "lang_realCores": "Kerne",
     "lang_reallocatedSectors": "Defekte Sektoren",
+    "lang_screens": "Bildschirme",
     "lang_serialNo": "Serien-Nr",
     "lang_showList": "Liste",
     "lang_showVisualization": "Visualisierung",
     "lang_sockets": "Sockel",
     "lang_tempPart": "Temp. Partition",
     "lang_tempPartStats": "Tempor\u00e4re Partition",
+    "lang_thoseAreProjectors": "Diese Modellnamen werden als Beamer behandelt, auch wenn die EDID-Informationen des Ger\u00e4tes anderes berichten.",
     "lang_timebarDesc": "Visuelle Darstellung der letzten Tage. Rote Abschnitte zeigen, wann der Rechner belegt war, gr\u00fcne, wann er nicht verwendet wurde, aber eingeschaltet war. Die leicht abgedunkelten Abschnitte markieren N\u00e4chte (22 bis 8 Uhr).",
     "lang_tmpGb": "HDD-Temp",
     "lang_total": "Gesamt",
