[permission-manager] filter for roles in user and location table, changed structure of role-spans in both tables

--- a/modules-available/permissionmanager/lang/de/template-tags.json
+++ b/modules-available/permissionmanager/lang/de/template-tags.json
@@ -17,5 +17,6 @@
     "lang_Save": "Speichern",
     "lang_all": "alle",
     "lang_selected": "ausgewählte",
-    "lang_Permissions": "Rechte"
+    "lang_Permissions": "Rechte",
+    "lang_selectizePlaceholder": "Nach Rollen filtern..."
 }
